--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -1,3 +1,21 @@
+/*
+Title: "Fancy Lad" screen styles
+Date Modified: 8/31/2015
+Date Created: 8/30/2015
+--
+Author: Fervr
+Contact: http://fervr.co/contact
+--
+Table of Contents:
+	layout
+	navigation
+	typography
+	alignment
+	misc
+*/
+
+@import url(//fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|Noto+Serif:400,400italic,700,700italic|Yellowtail);
+
 /* 
 layout 
 ------------------------------ */
@@ -6,6 +24,10 @@ html,
 body {
 	margin: 0;
 	padding: 0;
+	}
+
+body {
+	background: #a8b479;
 	}
 
 
@@ -33,7 +55,7 @@ body {
 	z-index: 10;
 	top: 0;
 	left: 0;
-	background-color: rgba(0,0,0,0.95);
+	background-color: rgba(63,107,106,0.95); /* #3f6b6a */
 	width: 100%;
 	height: 50px;
 	}
@@ -50,7 +72,7 @@ body {
 	}
 	
 #footer {
-	background-color: #999;
+	background-color: #4c4742;
 	width: 100%;
 	}
 
@@ -79,7 +101,7 @@ body {
 	}
 	
 .column .column-content {
-	background-color: #ccc;
+	background-color: rgba(255,255,255,0.5);
 	margin: 1px;
 	padding: 5px 15px;
 	position: relative;
@@ -169,15 +191,25 @@ typography
 ------------------------------ */
 
 body {
-	font: normal 14px/1.3em "helvetica neue", helvetica, arial, sans-serif;
+	font: normal 16px/1.3em "PT Sans Narrow", "helvetica neue", helvetica, arial, sans-serif;
+	font-weight: 400;
 	color: #333;
-	background: #fff;
+	}
+
+h1, h2, h3, h4 {
+	font-family: "PT Sans Narrow", "helvetica neue", helvetica, arial, sans-serif;
+	font-weight: 400;	
 	}
 
 #logo {
-	font-size: 32px;
+	font-family: "Yellowtail", "Noto Serif", "helvetica neue", helvetica, arial, sans-serif;
+	font-size: 34px;
 	line-height: 45px;
 	color: #fff;
+	}
+
+#footer {
+	color: #8b837c;
 	}
 
 #copyright { 
@@ -241,7 +273,19 @@ body {
 	clear: both;
 	}
 
-
+.clearfix {
+	*zoom: 1;
+	}
+.clearfix:before,
+.clearfix:after {
+	display: table;
+	content: "";
+	line-height: 0;
+	}
+.clearfix:after {
+	clear: both;
+	}
+	
 
 /* misc
 ------------------------------ */
@@ -310,4 +354,25 @@ input[disabled][type=submit],
 input[disabled=disabled][type=submit] {
     pointer-events: none;
     opacity: 0.5;
+	}
+	
+/* alternate background colors */
+.bg-color-brown {
+	background-color: #33131b;
+	}
+
+.bg-color-aqua {
+	background-color: #3f6b6a;
+	}
+	
+.bg-color-jade {
+	background-color: #5b8973;
+	}
+	
+.bg-color-meadow {
+	background-color: #a8b479;
+	}
+	
+.bg-color-tan {
+	background-color: #f0d4ac;
 	}
